--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="row">
       <nav class="menu span-7" role="navigation">
         <a href="http://anchorcms.com" title="{{ site.title }}" class="logo">
-          <svg class="icon-logo">
+          <svg>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#anchor"></use>
           </svg>
         </a>
