Add download link to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <a href="#" class="toggle"><span></span></a>
       </nav>
       <aside class="aside span-4">
-        <a class="button" href="#">Download</a>
+        <a class="button" href="{{ site.download_link }}">Download</a>
       </aside>
     </div>
   </div>
