--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="container">
     <div class="row">
-      <nav class="menu span-8" role="navigation">
-        <a href="http://anchorcms.com" title="{{ site.title }}" class="logo">
+      <nav class="menu span-8">
+        <a href="{{ site.url }}" title="{{ site.title }}" class="logo">
           <svg>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#anchor"></use>
           </svg>
