--- a/_includes/nav--footer.html
+++ b/_includes/nav--footer.html
@@ -1,5 +1,5 @@
 {% if site.data.navigation.footer %}
-  <nav class="menu span-6" role="navigation">
+  <nav class="menu span-6">
     {% for item in site.data.navigation.footer %}
       <a href="{{ item.url }}" title="{{ item.title }}">{{ item.title }}</a>
     {% endfor %}
